fixed design of add topic

--- a/Society/CategoryHome/Category.storyboard
+++ b/Society/CategoryHome/Category.storyboard
@@ -143,31 +143,23 @@
         <scene sceneID="4yl-Mz-h9e">
             <objects>
                 <viewController id="1Ks-c1-LOv" customClass="AddCategoryViewController" customModule="Society" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="rIM-7y-R3G">
+                    <view key="view" contentMode="scaleToFill" ambiguous="YES" id="rIM-7y-R3G">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="716"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Category" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JDB-Xq-uJU">
-                                <rect key="frame" x="45" y="54" width="324" height="34"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="34" id="Bb7-Zy-dWb"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Please add short description" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="0ji-F1-PQZ">
-                                <rect key="frame" x="45" y="103" width="324" height="73"/>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" text="Please add short description" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="0ji-F1-PQZ">
+                                <rect key="frame" x="45" y="154.66666666666666" width="324" height="73"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="73" id="0dV-QX-rRr"/>
+                                    <constraint firstAttribute="height" constant="60" id="0dV-QX-rRr"/>
                                 </constraints>
                                 <color key="textColor" systemColor="systemOrangeColor" red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="W9z-XT-MDJ">
-                                <rect key="frame" x="39" y="213" width="330" height="50"/>
-                                <color key="backgroundColor" red="0.25176583899999999" green="0.39075877570000001" blue="0.54124645360000001" alpha="1" colorSpace="calibratedRGB"/>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="W9z-XT-MDJ">
+                                <rect key="frame" x="42" y="264" width="330" height="50"/>
+                                <color key="backgroundColor" systemColor="systemOrangeColor" red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="jHC-GB-iXO"/>
                                 </constraints>
@@ -177,18 +169,67 @@
                                     <action selector="addCategory:" destination="1Ks-c1-LOv" eventType="touchUpInside" id="Rn3-ec-W5F"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="What topic do you want to start?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bOy-Qo-hbc">
+                                <rect key="frame" x="20" y="35" width="374" height="24"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="24" id="Z01-sG-0Tm"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="OMG! Give me more details!!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tl8-sl-Ne3">
+                                <rect key="frame" x="20" y="125.00000000000001" width="374" height="21.666666666666671"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21.670000000000002" id="PgX-qd-Vs1"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Yup thats LIT! Society NEEDS this!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zmE-ye-39f">
+                                <rect key="frame" x="61" y="235.66666666666663" width="292" height="20.333333333333343"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20.329999999999998" id="cQn-GS-jwa"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Topic" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JDB-Xq-uJU">
+                                <rect key="frame" x="45" y="67" width="324" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="jsH-8t-V8V"/>
+                                </constraints>
+                                <color key="textColor" systemColor="systemOrangeColor" red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" red="0.25176583899999999" green="0.39075877570000001" blue="0.54124645360000001" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="JDB-Xq-uJU" firstAttribute="top" secondItem="yCX-3x-K5K" secondAttribute="top" constant="54" id="35p-9E-YAK"/>
-                            <constraint firstItem="yCX-3x-K5K" firstAttribute="trailing" secondItem="W9z-XT-MDJ" secondAttribute="trailing" constant="45" id="4ks-lb-edg"/>
-                            <constraint firstItem="W9z-XT-MDJ" firstAttribute="top" secondItem="0ji-F1-PQZ" secondAttribute="bottom" constant="37" id="AUf-EG-3d4"/>
+                            <constraint firstItem="0ji-F1-PQZ" firstAttribute="top" secondItem="Tl8-sl-Ne3" secondAttribute="bottom" constant="8" id="0xa-LY-NMT"/>
+                            <constraint firstItem="JDB-Xq-uJU" firstAttribute="top" secondItem="bOy-Qo-hbc" secondAttribute="bottom" constant="8" id="2N7-iy-xPR"/>
+                            <constraint firstItem="yCX-3x-K5K" firstAttribute="trailing" secondItem="W9z-XT-MDJ" secondAttribute="trailing" constant="42" id="4ks-lb-edg"/>
+                            <constraint firstItem="Tl8-sl-Ne3" firstAttribute="leading" secondItem="yCX-3x-K5K" secondAttribute="leading" constant="20" id="6iI-xW-nta"/>
+                            <constraint firstItem="Tl8-sl-Ne3" firstAttribute="top" secondItem="JDB-Xq-uJU" secondAttribute="bottom" constant="8" id="6sZ-9c-xAp"/>
+                            <constraint firstItem="JDB-Xq-uJU" firstAttribute="top" secondItem="bOy-Qo-hbc" secondAttribute="bottom" constant="8" id="D7c-bS-OWW"/>
                             <constraint firstItem="yCX-3x-K5K" firstAttribute="trailing" secondItem="0ji-F1-PQZ" secondAttribute="trailing" constant="45" id="DNT-4a-SPI"/>
-                            <constraint firstItem="0ji-F1-PQZ" firstAttribute="top" secondItem="JDB-Xq-uJU" secondAttribute="bottom" constant="15" id="OHy-TM-SoQ"/>
+                            <constraint firstItem="yCX-3x-K5K" firstAttribute="trailing" secondItem="Tl8-sl-Ne3" secondAttribute="trailing" constant="20" id="ENh-u6-i5t"/>
+                            <constraint firstItem="yCX-3x-K5K" firstAttribute="trailing" secondItem="bOy-Qo-hbc" secondAttribute="trailing" constant="20" id="Pgl-iV-sC9"/>
+                            <constraint firstItem="yCX-3x-K5K" firstAttribute="trailing" secondItem="Tl8-sl-Ne3" secondAttribute="trailing" constant="20" id="QGk-mC-14w"/>
+                            <constraint firstItem="bOy-Qo-hbc" firstAttribute="top" secondItem="yCX-3x-K5K" secondAttribute="top" constant="35" id="XDs-IV-mvI"/>
+                            <constraint firstItem="W9z-XT-MDJ" firstAttribute="top" secondItem="zmE-ye-39f" secondAttribute="bottom" constant="8" id="bHR-hQ-Zdf"/>
                             <constraint firstItem="yCX-3x-K5K" firstAttribute="trailing" secondItem="JDB-Xq-uJU" secondAttribute="trailing" constant="45" id="cwt-qh-vMC"/>
+                            <constraint firstItem="zmE-ye-39f" firstAttribute="top" secondItem="0ji-F1-PQZ" secondAttribute="bottom" constant="8" id="d9k-aY-Zn3"/>
+                            <constraint firstItem="Tl8-sl-Ne3" firstAttribute="leading" secondItem="yCX-3x-K5K" secondAttribute="leading" constant="20" id="jeY-YH-LkA"/>
                             <constraint firstItem="JDB-Xq-uJU" firstAttribute="leading" secondItem="yCX-3x-K5K" secondAttribute="leading" constant="45" id="jhv-VG-fDO"/>
-                            <constraint firstItem="W9z-XT-MDJ" firstAttribute="leading" secondItem="yCX-3x-K5K" secondAttribute="leading" constant="39" id="oPA-5v-CS3"/>
+                            <constraint firstItem="yCX-3x-K5K" firstAttribute="trailing" secondItem="zmE-ye-39f" secondAttribute="trailing" constant="61" id="lOI-Dw-wOr"/>
+                            <constraint firstItem="W9z-XT-MDJ" firstAttribute="leading" secondItem="yCX-3x-K5K" secondAttribute="leading" constant="42" id="oPA-5v-CS3"/>
+                            <constraint firstItem="zmE-ye-39f" firstAttribute="leading" secondItem="yCX-3x-K5K" secondAttribute="leading" constant="61" id="pWF-SK-99h"/>
+                            <constraint firstItem="bOy-Qo-hbc" firstAttribute="leading" secondItem="yCX-3x-K5K" secondAttribute="leading" constant="20" id="qRF-he-ix6"/>
                             <constraint firstItem="0ji-F1-PQZ" firstAttribute="leading" secondItem="yCX-3x-K5K" secondAttribute="leading" constant="45" id="xqE-Ie-645"/>
+                            <constraint firstItem="yCX-3x-K5K" firstAttribute="bottom" secondItem="W9z-XT-MDJ" secondAttribute="bottom" constant="402" id="yEu-XS-ryX"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="yCX-3x-K5K"/>
                     </view>
